@@ -1,3 +1,8 @@
+2008-04-10  Mickael Remond  <mremond@process-one.net>
+
+	*src/ejabberd_c2s.erl: Uniform default value for empty privacy
+	list. Fixes (EJAB-603).
+
 2008-04-08  Badlop  <badlop@process-one.net>
 
 	* src/ejabberd_auth_ldap.erl: LDAP function to get the number of
